--- a/Lab1-matrixmul/from_annexstein/Makefile
+++ b/Lab1-matrixmul/from_annexstein/Makefile
@@ -50,4 +50,4 @@ CCFILES		:= \
 ################################################################################
 # Rules and targets
 
-include ../../common/common.mk
+include ./common.mk
